--- a/processDB.ipynb
+++ b/processDB.ipynb
@@ -116,21 +116,157 @@
     "print(f\"DataFrame filtrado: {len(df_latest):,} linhas\")\n",
     "print(f\"Redução: {((len(df) - len(df_latest)) / len(df) * 100):.1f}%\")\n",
     "\n",
-    "# Verifica o resultado para o projeto git\n",
-    "print(\"\\nExemplo - versões do git restantes:\")\n",
-    "git_versions = df_latest[df_latest[\"Project Name\"] == \"git\"][\"Version Number\"].unique()\n",
-    "print(f\"Git versions: {sorted(git_versions)}\")"
+    "# Salva o DataFrame filtrado em Parquet\n",
+    "df_latest.to_parquet(\"DB/dependencies-1.6.0-latest_versions.parquet\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0da1ffc",
+   "metadata": {},
+   "source": [
+    "- **Absolute latest version**: A versão mais recente de cada dependência independete da plataforma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d85177db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from packaging import version\n",
+    "import numpy as np\n",
+    "\n",
+    "# Carrega o arquivo Parquet\n",
+    "df = pd.read_parquet(\"DB/dependencies-1.6.0-latest_versions.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9aa68152",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parsing versions...\n",
+      "Finding absolute latest versions...\n",
+      "Filtering to absolute latest versions...\n",
+      "DataFrame original: 19,557,940 linhas\n",
+      "DataFrame com versões absolutas mais recentes: 19,253,961 linhas\n",
+      "Redução: 1.6%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ESSA OPERAÇÃO DEMOROU 7 MINUTOS COM A SEGUINTE CONFIGURAÇÃO:\n",
+    "# CPU Intel(R) Xeon(R) CPU E5-2680 v3 @ 2.50GHz\n",
+    "# RAM 256 GB\n",
+    "\n",
+    "def parse_version_safe(version_str):\n",
+    "    \"\"\"Converte string de versão para objeto Version do packaging\"\"\"\n",
+    "    try:\n",
+    "        # Remove prefixos comuns e limpa a string\n",
+    "        clean_version = str(version_str).strip().lstrip('v')\n",
+    "        # Remove sufixos como '+build' ou '-alpha'\n",
+    "        clean_version = clean_version.split('+')[0].split('-')[0]\n",
+    "        return version.Version(clean_version)\n",
+    "    except:\n",
+    "        # Para versões inválidas, retorna uma versão muito baixa\n",
+    "        return version.Version(\"0.0.0\")\n",
+    "\n",
+    "# Aplica parsing de versão de forma vetorizada\n",
+    "print(\"Parsing versions...\")\n",
+    "df['version_obj'] = df['Version Number'].apply(parse_version_safe)\n",
+    "\n",
+    "# Encontra a versão ABSOLUTA mais recente para cada projeto (ignorando plataforma)\n",
+    "print(\"Finding absolute latest versions...\")\n",
+    "latest_versions = df.groupby('Project Name')['version_obj'].transform('max')\n",
+    "\n",
+    "# Filtra mantendo apenas as versões mais recentes absolutas\n",
+    "print(\"Filtering to absolute latest versions...\")\n",
+    "df_absolute_latest = df[df['version_obj'] == latest_versions].copy()\n",
+    "\n",
+    "# Remove coluna auxiliar\n",
+    "df_absolute_latest.drop('version_obj', axis=1, inplace=True)\n",
+    "\n",
+    "print(f\"DataFrame original: {len(df):,} linhas\")\n",
+    "print(f\"DataFrame com versões absolutas mais recentes: {len(df_absolute_latest):,} linhas\")\n",
+    "print(f\"Redução: {((len(df) - len(df_absolute_latest)) / len(df) * 100):.1f}%\")\n",
+    "\n",
+    "# Salva o DataFrame filtrado em Parquet\n",
+    "df_absolute_latest.to_parquet(\"DB/dependencies-1.6.0-absolute_latest_versions.parquet\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8de972a",
+   "metadata": {},
+   "source": [
+    "- **Filtro de informações não relevantes**: remove linhas de informações não relevantes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8ae718e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Carrega arquivo parquet\n",
+    "df = pd.read_parquet(\"DB/dependencies-1.6.0-absolute_latest_versions.parquet\")\n",
+    "# remove linhas com valores ausentes nas colunas \"Project Name\" e \"Dependency Name\"\n",
+    "df.dropna(subset=[\"Project Name\", \"Dependency Name\"], inplace=True)\n",
+    "# filtra linhas desnecessárias\n",
+    "df = df[~df[\"Project Name\"].str.match(r\"^all-packages-\\d+.*\", na=False)]\n",
+    "df = df[~df[\"Project Name\"].str.match(r\"^cool-\\d+.*\", na=False)]\n",
+    "df = df[~df[\"Project Name\"].str.match(r\"^neat-\\d+.*\", na=False)]\n",
+    "df = df[~df[\"Project Name\"].str.match(r\"^wowdude-\\d+.*\", na=False)]\n",
+    "\n",
+    "# Salva o DataFrame filtrado em Parquet\n",
+    "df.to_parquet(\"DB/dependencies-1.6.0-clean.parquet\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "937f4b2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove as colunas mantendo apenas  \"Project Name\", \"Dependency Name\" e cria uma lista de dependências\n",
+    "df = df[[\"Project Name\", \"Dependency Name\"]]\n",
+    "# salva o DataFrame filtrado em Parquet\n",
+    "df.to_parquet(\"DB/List-dependencies.parquet\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b466c222",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"DB/List-dependencies.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6cc6282",
+   "id": "0b5c5bd8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Salva o DataFrame filtrado em Parquet\n",
-    "df_latest.to_parquet(\"DB/dependencies-1.6.0-latest_versions.parquet\", index=False)"
+    "# Teste de filtro\n",
+    "filtro = r\"^wowdude-\\d+.*\"\n",
+    "display(df[df[\"Project Name\"].str.match(filtro, na=False)])\n",
+    "display(df[df[\"Dependency Name\"].str.match(filtro, na=False)])"
    ]
   }
  ],
