--- a/processDB.ipynb
+++ b/processDB.ipynb
@@ -84,33 +84,35 @@
     "# CPU Intel(R) Xeon(R) CPU E5-2680 v3 @ 2.50GHz\n",
     "# RAM 256 GB\n",
     "\n",
+    "\n",
     "def parse_version_safe(version_str):\n",
     "    \"\"\"Converte string de versão para objeto Version do packaging\"\"\"\n",
     "    try:\n",
     "        # Remove prefixos comuns e limpa a string\n",
-    "        clean_version = str(version_str).strip().lstrip('v')\n",
+    "        clean_version = str(version_str).strip().lstrip(\"v\")\n",
     "        # Remove sufixos como '+build' ou '-alpha'\n",
-    "        clean_version = clean_version.split('+')[0].split('-')[0]\n",
+    "        clean_version = clean_version.split(\"+\")[0].split(\"-\")[0]\n",
     "        return version.Version(clean_version)\n",
     "    except:\n",
     "        # Para versões inválidas, retorna uma versão muito baixa\n",
     "        return version.Version(\"0.0.0\")\n",
     "\n",
+    "\n",
     "# Aplica parsing de versão de forma vetorizada\n",
     "print(\"Parsing versions...\")\n",
-    "df['version_obj'] = df['Version Number'].apply(parse_version_safe)\n",
+    "df[\"version_obj\"] = df[\"Version Number\"].apply(parse_version_safe)\n",
     "\n",
     "# Agrupa por Project Name E Platform para encontrar versão máxima\n",
     "# (importante porque o mesmo projeto pode existir em plataformas diferentes)\n",
     "print(\"Finding latest versions...\")\n",
-    "latest_versions = df.groupby(['Project Name', 'Platform'])['version_obj'].transform('max')\n",
+    "latest_versions = df.groupby([\"Project Name\", \"Platform\"])[\"version_obj\"].transform(\"max\")\n",
     "\n",
     "# Filtra mantendo apenas as versões mais recentes\n",
     "print(\"Filtering dataframe...\")\n",
-    "df_latest = df[df['version_obj'] == latest_versions].copy()\n",
+    "df_latest = df[df[\"version_obj\"] == latest_versions].copy()\n",
     "\n",
     "# Remove coluna auxiliar para economizar memória\n",
-    "df_latest.drop('version_obj', axis=1, inplace=True)\n",
+    "df_latest.drop(\"version_obj\", axis=1, inplace=True)\n",
     "\n",
     "print(f\"DataFrame original: {len(df):,} linhas\")\n",
     "print(f\"DataFrame filtrado: {len(df_latest):,} linhas\")\n",
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9aa68152",
    "metadata": {},
    "outputs": [
@@ -167,32 +169,34 @@
     "# CPU Intel(R) Xeon(R) CPU E5-2680 v3 @ 2.50GHz\n",
     "# RAM 256 GB\n",
     "\n",
+    "\n",
     "def parse_version_safe(version_str):\n",
     "    \"\"\"Converte string de versão para objeto Version do packaging\"\"\"\n",
     "    try:\n",
     "        # Remove prefixos comuns e limpa a string\n",
-    "        clean_version = str(version_str).strip().lstrip('v')\n",
+    "        clean_version = str(version_str).strip().lstrip(\"v\")\n",
     "        # Remove sufixos como '+build' ou '-alpha'\n",
-    "        clean_version = clean_version.split('+')[0].split('-')[0]\n",
+    "        clean_version = clean_version.split(\"+\")[0].split(\"-\")[0]\n",
     "        return version.Version(clean_version)\n",
     "    except:\n",
     "        # Para versões inválidas, retorna uma versão muito baixa\n",
     "        return version.Version(\"0.0.0\")\n",
     "\n",
+    "\n",
     "# Aplica parsing de versão de forma vetorizada\n",
     "print(\"Parsing versions...\")\n",
-    "df['version_obj'] = df['Version Number'].apply(parse_version_safe)\n",
+    "df[\"version_obj\"] = df[\"Version Number\"].apply(parse_version_safe)\n",
     "\n",
     "# Encontra a versão ABSOLUTA mais recente para cada projeto (ignorando plataforma)\n",
     "print(\"Finding absolute latest versions...\")\n",
-    "latest_versions = df.groupby('Project Name')['version_obj'].transform('max')\n",
+    "latest_versions = df.groupby(\"Project Name\")[\"version_obj\"].transform(\"max\")\n",
     "\n",
     "# Filtra mantendo apenas as versões mais recentes absolutas\n",
     "print(\"Filtering to absolute latest versions...\")\n",
-    "df_absolute_latest = df[df['version_obj'] == latest_versions].copy()\n",
+    "df_absolute_latest = df[df[\"version_obj\"] == latest_versions].copy()\n",
     "\n",
     "# Remove coluna auxiliar\n",
-    "df_absolute_latest.drop('version_obj', axis=1, inplace=True)\n",
+    "df_absolute_latest.drop(\"version_obj\", axis=1, inplace=True)\n",
     "\n",
     "print(f\"DataFrame original: {len(df):,} linhas\")\n",
     "print(f\"DataFrame com versões absolutas mais recentes: {len(df_absolute_latest):,} linhas\")\n",
@@ -235,13 +239,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
+   "id": "8ab196d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet(\"DB/dependencies-1.6.0-clean.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "937f4b2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remove as colunas mantendo apenas  \"Project Name\", \"Dependency Name\" e cria uma lista de dependências\n",
-    "df = df[[\"Project Name\", \"Dependency Name\"]]\n",
+    "# remove as colunas mantendo apenas  \"Project Name\", \"Dependency Name\", \"Platform\", \"Dependency Platform\" e cria uma lista de dependências\n",
+    "df = df[[\"Project Name\", \"Platform\", \"Dependency Name\", \"Dependency Platform\"]]\n",
     "# salva o DataFrame filtrado em Parquet\n",
     "df.to_parquet(\"DB/List-dependencies.parquet\", index=False)"
    ]
