--- a/main copy.ipynb
+++ b/main copy.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "de40525a",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 95%|█████████▍| 18/19 [46:58<07:58, 478.22s/it]"
+      "100%|██████████| 19/19 [26:07:21<00:00, 4949.53s/it] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Análise de todos os grafos concluída! ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
