dados gerados de diametro e histogramas

--- a/main.ipynb
+++ b/main.ipynb
@@ -149,7 +149,14 @@
       "\n",
       "Iniciando análise para o grafo: Maven...\n",
       "  Calculando PageRank em 116,772 nós...\n",
-      "  Calculando Betweenness em 116,772 nós...\n"
+      "  Calculando Betweenness em 116,772 nós...\n",
+      "  Calculando Coeficiente de Clusterização...\n",
+      "  Detectando comunidades (Louvain)...\n",
+      "Análise de Maven concluída em 100174.68 segundos.\n",
+      "\n",
+      "Iniciando análise para o grafo: NPM...\n",
+      "  Calculando PageRank em 1,022,526 nós...\n",
+      "  Calculando Betweenness em 1,022,526 nós...\n"
      ]
     }
    ],
